--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@
 version: '3.8'
 services:
   springboot-app:
-    # container_name: spring-app
+    container_name: spring-app
     image: springbooot-app
     restart: always
     build: .
@@ -14,17 +14,22 @@ services:
       MYSQL_PASSWORD: mysecretpassword
       MYSQL_PORT: 3306
       REDIS_PORT: 6379
-      REDIS_HOST: localhost
+      REDIS_HOST: myredis
+    networks:
+      - my_network
 
   redis:
     image: redis
-    container_name: localhost
+    container_name: myredis
+    command: redis-server
+    hostname: myredis
     ports:
       - 6379:6379
     environment:
       - ALLOW_EMPTY_PASSWORD=yes
       - REDIS_DISABLE_COMMANDS=FLUSHDB,FLUSHALL
-
+    networks:
+      - my_network
 
   mysqldb:
     container_name: mysqldb
@@ -34,6 +39,9 @@ services:
     environment:
       MYSQL_DATABASE: mydb
       MYSQL_ROOT_PASSWORD: mysecretpassword
+    networks:
+      - my_network
 
-
+networks:
+  my_network:
 
